fix: btn-close in dark mode

--- a/src/Web/Shared/Styles/Theme.scss
+++ b/src/Web/Shared/Styles/Theme.scss
@@ -241,6 +241,10 @@ body {
         text-shadow: none;
     }
 
+    .btn-close {
+        filter: invert(1) grayscale(100%) brightness(200%);
+    }
+
     // Alerts / cards / list groups
     .alert-secondary {
         background-color: var(--omu-surface-hover);
