--- a/src/Web/Shared/wwwroot/css/shared.css
+++ b/src/Web/Shared/wwwroot/css/shared.css
@@ -12005,6 +12005,9 @@ body {
   color: var(--omu-text);
   text-shadow: none;
 }
+[data-theme=dark] .btn-close {
+  filter: invert(1) grayscale(100%) brightness(200%);
+}
 [data-theme=dark] .alert-secondary {
   background-color: var(--omu-surface-hover);
   color: var(--omu-text);
